# Ruda

./: .gitignore  LICENSE  README.md  SECURITY.md  array.rdbin  build.rar  docs.txt  echo.rdbin  file.txt  fixme.rd  mkdocs.yml  ruda_build.py  ruda_build.sh  ruda_build_unix.py  stdlib_test.py  test.rdbin  test.txt
compiler/: Cargo.toml  README.md
compiler/ast/: json.ast  readme  registry.ast  ruda.ast  test.libdesc
compiler/demo/: expr.rd  expressions.html  main.rd  pong.ds  readme  rustydanda.ds  test.rd  variables.rd
compiler/scrapped_code/: canvas.rs  for_later.rs  lexer.rs  parser.rs  readme  syntaxRef.rd
compiler/src/: ast_parser.rs  codeblock_parser.rs  codegen.rs  expression_parser.rs  intermediate.rs  lexer.rs  lexing_preprocessor.rs  lib.rs  libloader.rs  main.rs  old_main.rs  prep_objects.rs  rdasm_opt.rs  reader.rs  tree_walker.rs  type_check.rs  writer.rs
compiler_cli/: Cargo.toml
compiler_cli/src/: main.rs
debugger/: Cargo.toml
debugger/src/: lib.rs
docs/: index.md  installation.md  mkdocs.yml
docs/cheatsheet/: keywords.md  operators.md  syntax.md
docs/docs/: index.md  installation.md
docs/docs/cheatsheet/: keywords.md  operators.md  syntax.md
docs/docs/extensions/: about.md  starting.md
docs/docs/pacman/: building.md  configuration.md  debugging.md  help.md  packages.md
docs/docs/projects/: number-guessing-game.md
docs/docs/tutorial/: comments.md  constants.md  control-flow.md  data-types.md  enums.md  error-handling.md  functions.md  hello.md  methods.md  modules.md  new-project.md  operators.md  pointers.md  structs.md  variables.md
docs/extensions/: about.md  starting.md
docs/pacman/: building.md  configuration.md  debugging.md  help.md  packages.md
docs/projects/: number-guessing-game.md
docs/tutorial/: comments.md  constants.md  control-flow.md  data-types.md  enums.md  error-handling.md  functions.md  hello.md  methods.md  modules.md  new-project.md  operators.md  pointers.md  structs.md  variables.md
docs/tutorial/advanced/: generics.md  hi.md  memory.md  overloads.md  traits.md
examples/bomby/: Ruda.toml
examples/bomby/src/: main.rd
examples/maze/: pyton.py
examples/maze/src/: main.rd
examples/number-guessing-game/src/: main.rd
pacman/: Cargo.toml  README
pacman/project/: Ruda.toml
pacman/src/: args.rs  build.rs  compile.rs  config.rs  init.rs  lens.rs  main.rs  remote.rs  run.rs  sum.rs
pacman/templates/: Ruda.toml
pacman/templates/init/: Ruda.toml  lib.rd  main.rd
presentation/: docs.txt  scene.py  script.txt  talking points.txt
presentation/latex/: sablona-zaverecne-prace.aux  sablona-zaverecne-prace.lof  sablona-zaverecne-prace.out  sablona-zaverecne-prace.tex  sablona-zaverecne-prace.toc
presentation/latex/latex/: oswald.tex  sablona-zaverecne-prace.aux  (+3 more)
stdlib/algo/: Cargo.toml  README  lib.rs
stdlib/base/: Cargo.toml  lib.rs
stdlib/core/: Cargo.toml  lib.rs
stdlib/fs/: Cargo.toml  README  lib.rs
stdlib/io/: Cargo.toml  README.md  lib.rs
stdlib/math/: Cargo.toml  lib.rs
stdlib/memory/: Cargo.toml  lib.rs
stdlib/string/: Cargo.toml  README.md  lib.rs
stdlib/time/: Cargo.toml  lib.rs
stdlib/window/: Cargo.toml  README  lib.rs
tests/any/: Cargo.toml
tests/benchmark/: Ruda.toml  python.py
tests/danda/: .gitignore  Ruda.toml
tests/ruda init/: Ruda.toml
vm/: Cargo.toml  README.md  build.rs  bye file  rustyvm  test.rdbin
vm/examples/: empty.dasm  err.dasm  forDea.dasm  for_loop.dasm  heapErr.dasm
vm/runtime/: Cargo.toml
vm/runtime/src/: lib.rs
vm/src/: main.rs  stringify.rs  test.rs
vm/stringify/: Cargo.toml
vm/stringify/src/: lib.rs
(+23 files in other folders)
