[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
runtime = { path = "../vm/runtime" }
snailquote = "0.3.1"
libloading = "0.7.0"
stringify ={ path = "../vm/stringify" }

[profile.dev]
opt-level = 3

[lib]
crate-type = ["lib"]
