[package]
name = "ruda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
toml = "0.5.8"
serde = { version = "1.0.130", features = ["derive"] }
sha2 = "0.10.7"


[profile.dev]
opt-level = 3
debug = false
