[package]
name = "ruda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
toml = "*"
serde = { version = "*", features = ["derive"] }
sha2 = "0.10.7"
git2 = "0.17.2"
git-url-parse = "0.4.4"
serde_either = "0.2.1"
compiler = { path = "../compiler" }
iced = { git = "https://github.com/iced-rs/iced.git", rev = "refs/tags/text-editor", features = ["debug"] }

[profile.dev]
opt-level = 3
debug = false
