[package]
name = "rusty_vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
enable-ansi-support = "0.2.1"
runtime = {path = "./runtime"}
libloading = "0.7.0"
clap = { version = "4.3.19", features = ["derive"] }


[profile.dev]
opt-level = 3
debug = false
