[package]
name = "time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
runtime = {path = "../../vm/runtime"}
rand = "0.8.4"
spin_sleep = "1.1.1"

[lib]
path = "lib.rs"
crate-type = ["cdylib"]


[profile.dev]
opt-level = 3
debug = false