[package]
name = "stringify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
runtime = { path = "../runtime" }
libloading = "0.7.0"

[lib]
name = "stringify"

[profile.dev]
opt-level = 3
debug = false